Started deprecation process of on_xxx handlers

--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 1.2
     - Tidy up the code with .perltidyrc and githook-perltidy
+    - Started deprecation process of on_xxx handlers
 
 1.1    2014-03-13 05:55:00
     - Update test suite to latest Mojo (Valcho Nedelchev)
