--- a/README
+++ b/README
@@ -43,7 +43,7 @@ SYNOPSIS
           sub {
             my($delay, $err, $token) = @_;
             return $c->render("connect", error => $err) unless $token;
-            return $c->session(token => $token->redirect_to('profile'));
+            return $c->session(token => $token)->redirect_to('profile');
           },
         );
       };
